# witness-angel-cryptolib

./: .appveyor.yml  .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  AUTHORS  CHANGELOG  DEVELOP  LICENSE.txt  Readme.md  Readme.rst  appveyor.yml  ci.sh  conf.py  dump_cryptconf_complex.py  main.py  manage.py  pip_requirements_export.txt  processor.py  pyinstaller.spec  pyproject.toml  setup.cfg  test.rtf  tox.ini  wacryptolib_installer.py
assets/: flightbox_512x512.icns
docs/: algorithms_overview.rst  api.rst  cipher.rst  concepts.rst  conf.py  container_format.rst  containers.rst  crypolib_api.rst  cryptainer_explanations.rst  cryptainer_format.rst  cryptoconf_examples.rst  cryptolib_concepts.rst  development.rst  doc_requirements.txt  documentation.rst  encryption.rst  flightbox_cli.rst  flightbox_cli_manual.rst  flightbox_cli_tutorial.rst  getting_started.rst  index.rst  key_generation.rst  make.bat  readme.rst  selected_protocols.rst  shared_secret.rst  signature.rst  utilities.rst
docs/api/: authdevice.rst  authentication_device.rst  authenticator.rst  cipher.rst  container.rst  cryptainer.rst  encryption.rst  error_handling.rst  escrow.rst  exceptions.rst  jsonrpc_client.rst  key_device.rst  key_generation.rst  key_storage.rst  keygen.rst  keystore.rst  scaffolding.rst  sensor.rst  shared_secret.rst  signature.rst  trustee.rst  utilities.rst
poc_purepython/: test_aes.py  test_pkcs1.py  test_rsa.py
scripts/: compare_crypto_libraries.py  profile_memory_usage.py
src/: wacryptolib.py
src/wacryptolib/: __init__.py  __main__.py  __old_cryptainer.py  authdevice.py  authentication_device.py  authenticator.py  cipher.py  cli.py  container.py  cryptainer.py  encryption.py  error_handling.py  escrow.py  exceptions.py  jsonrpc_client.py  key_device.py  key_generation.py  key_storage.py  keygen.py  keystore.py  operations.py  scaffolding.py  sensor.py  shared_secret.py  sharedsecret.py  signature.py  trustee.py  utilities.py
src/wacryptolib/_crypto_backend/: __init__.py  pycryptodome.py
src/wacryptolib/backends/: __init__.py  fallback.py  pycryptodome.py
src/wacryptolib/cryptainer/: __init__.py  _analysis.py  _authorization.py  _base.py  _decryptor.py  _encryption_pipeline.py  _encryptor.py  _filesystem.py  _flightbox.py  _shortcuts.py  _signing.py  _storage.py  _validation.py  decryptor.py  encryption_pipeline.py  encryptor.py  filesystem.py  shortcuts.py  signing.py  storage.py  validation.py
src/waserver/: apps.py  escrow_api.py  settings.py  urls.py  views.py  wsgi.py
tests/: _test_mockups.py  conftest.py  test_cryptolib.py  test_processor.py  test_wacryptolib.py  test_wacryptolib_authdevice.py  test_wacryptolib_authentication_device.py  test_wacryptolib_authenticator.py  test_wacryptolib_cipher.py  test_wacryptolib_cli.py  test_wacryptolib_container.py  test_wacryptolib_cryptainer.py  test_wacryptolib_encryption.py  test_wacryptolib_error_handling.py  test_wacryptolib_escrow.py  test_wacryptolib_jsonrpc_client.py  test_wacryptolib_key_device.py  test_wacryptolib_key_generation.py  test_wacryptolib_key_storage.py  test_wacryptolib_keygen.py  test_wacryptolib_keystore.py  test_wacryptolib_sensor.py  test_wacryptolib_sensors.py  test_wacryptolib_shared_secret.py  test_wacryptolib_signature.py  test_wacryptolib_trustee.py  test_wacryptolib_utilities.py  test_waserver_escrow_api.py
