[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"


[tool.poetry]
name = "wacryptolib"
description = "Witness Angel Cryptolib"
version = "0.5.2"
license = "MIT"
readme = "Readme.rst"
authors = ["Pascal Chambon", "Manon Michelet", "Akram Bourichi"]
homepage = "https://github.com/WitnessAngel/witness-angel-cryptolib"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
]
include = ["CHANGELOG", "tox.ini", "docs/*", "docs/api/*", "tests/*.py"]
exclude = ["_build"]

[tool.poetry.dependencies]
python = ">=3.6"

# Cryptography & transports
pycryptodome = "^3.9"
schema = "^0.7.0"
click = "^7.0"
pymongo = "^3.9"
jsonrpc-requests = "^0.4.0"
decorator = "^4.4"
multitimer = "^0.2.0"
uuid0 = "^0.2.7"
pytz = "^2019.3"
wmi = { version = "^1.5.1 ", platform = 'win32' }
pywin32 = { version = "^228", platform = 'win32' }
pyudev = { version = "^0.22.0 ", platform = 'linux' }
psutil = { version = "^5.7.2", platform = 'linux' }

[tool.poetry.dev-dependencies]

# Test runners and plugins
pytest = "^4.5"
pytest-cov = "^2.7"
pytest-randomly = "^3.0"
pytest-deadfixtures = "^2.1"
pytest-testmon = "^0.9"
pytest-timeout = "^1.3"
pytest-xdist = "^1.30"
responses = "^0.10.6"
freezegun = "^0.3.12"

# Linters and formatters
black = {version = "^18.3-alpha.0", allow-prereleases = true}
pylint = "^2.3"
safety = "^1.8"
yamllint = "^1.15"
xenon = "^0.5"
mypy = "^0.701"
doc8 = "^0.8"

# Documentation
sphinx = "^2.0"
sphinx-autodoc-typehints = "^1.6"
sphinx_rtd_theme = "^0.4.3"
toml = "^0.10.0"

