[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "wacryptolib"
description = "Witness Angel Cryptolib"
version = "0.7"
license = "MIT"
readme = "Readme.rst"
authors = ["Pascal Chambon", "Manon Michelet", "Akram Bourichi", "Francinette Atchade"]
homepage = "https://witnessangel.com/"
repository = "https://github.com/WitnessAngel/witness-angel-cryptolib"
documentation = "https://witness-angel-cryptolib.readthedocs.io/"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
]
include = ["CHANGELOG", "tox.ini", "docs/*", "docs/api/*", "tests/*.py"]
exclude = ["_build"]

[tool.poetry.dependencies]
python = ">=3.7, <=3.10"

# Cryptography & transports
pycryptodome = "^3.9.9"
schema = "^0.7.2"
jsonschema = "^4.1.2"
click = "^7.1.2"
pymongo = "^3.11.2"
jsonrpc-requests = "^0.4.0"
decorator = "^4.4.2"
multitimer = "^0.3"
uuid0 = "^0.2.7"
pytz = "^2020.5"
wmi = { version = "^1.5.1 ", platform = 'win32' }
pywin32 = { version = ">=300", platform = 'win32' }
pyudev = { version = "^0.22.0 ", platform = 'linux' }
psutil = { version = "^5.8.0", platform = 'linux' }

[tool.poetry.dev-dependencies]

# Test runners and plugins
pytest = "^6.2.1"
pytest-cov = "^2.10.1"
pytest_mock = "^3.6.1"
pytest-randomly = "^3.5"
pytest-deadfixtures = "^2.2.1"
pytest-testmon = "^1.0.3"
pytest-timeout = "^1.4.2"
pytest-xdist = "^2.2.0"
responses = "^0.12.1"
freezegun = "^1.0.0"
typeguard = "^2.10.0"

# Linters and formatters
black = {version = "^18.3-alpha.0", allow-prereleases = true}
darglint = "^1.8.1"
pylint = "^2.6"
mypy = "^0.790"
xenon = "^0.7.1"
safety = "^1.10"
doc8 = "^0.8.1"

# Documentation
sphinx = "^3.4.1"
sphinx-autodoc-typehints = "^1.11.1"
sphinx_rtd_theme = "^0.5.0"
toml = "^0.10.2"

# Install these with pip for manual benchmarks
#memory-profiler = "^0.58.0"
#matplotlib = "^3.4.3"
#pytest-profiling = "^1.7.0"
